--- a/js/pages/service/process.html
+++ b/js/pages/service/process.html
@@ -109,7 +109,7 @@
             <img id="r3" src="../img/discover/member.png" class="item-img-r" style="display: none;">
         </div>
     </div>
-    <div class="oneLine">
+    <!-- <div class="oneLine">
         <div>
             <img id="l4" src="../img/discover/member.png" class="item-img" style="display: none;">
         </div>
@@ -142,7 +142,7 @@
         <div>
             <img id="r5" src="../img/discover/member.png" class="item-img-r" style="display: none;">
         </div>
-    </div>
+    </div> -->
     <div class="oneLine" onclick="javascript:location.href='ready.html';">
         <div>
             <img id="lEnd" src="../img/discover/member.png" class="item-img" style="display: none;">
