--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -184,22 +184,22 @@ body {
     </div>
     <div style="height: 50px;">
     </div>
-    <nav class="mui-bar mui-bar-tab" style="background: white !important;z-index: 999;" ms-controller="inroom">
-        <a class="mui-tab-item" ms-on-tap="goIndex2">
-            <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">首页</span>
-        </a>
-        <a class="mui-tab-item">
-            <span class="mui-icon"><img src="/img/icon/icon-ruzhu-select.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">入住</span>
-        </a>
-        <a class="mui-tab-item" ms-on-tap="goOrder">
-            <span class="mui-icon"><img src="/img/icon/icon-dingdan.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">订单</span>
-        </a>
-        <a class="mui-tab-item" ms-on-tap="goUser">
-            <span class="mui-icon"><img src="/img/icon/icon-more.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">我的</span>
-        </a>
-    </nav>
 </div>
+<nav class="mui-bar mui-bar-tab" style="background: white !important;" ms-controller="inroom">
+    <a class="mui-tab-item" ms-on-tap="goIndex2">
+        <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
+        <span class="mui-tab-label">首页</span>
+    </a>
+    <a class="mui-tab-item">
+        <span class="mui-icon"><img src="/img/icon/icon-ruzhu-select.svg" class="nav-ico"></span>
+        <span class="mui-tab-label">入住</span>
+    </a>
+    <a class="mui-tab-item" ms-on-tap="goOrder">
+        <span class="mui-icon"><img src="/img/icon/icon-dingdan.svg" class="nav-ico"></span>
+        <span class="mui-tab-label">订单</span>
+    </a>
+    <a class="mui-tab-item" ms-on-tap="goUser">
+        <span class="mui-icon"><img src="/img/icon/icon-more.svg" class="nav-ico"></span>
+        <span class="mui-tab-label">我的</span>
+    </a>
+</nav>
