时间选择弹窗调整，hotel和房型页面调整

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -64,8 +64,8 @@
                     {{end|html}}
                 </div>
             </div>
-            <hr ms-if="!type" style="width: 95%;margin-top: 0px;margin-bottom: 20px;">
-            <div class="time-clock" ms-if="!type">
+            <hr ms-if="type==10" style="width: 95%;margin-top: 0px;margin-bottom: 20px;">
+            <div class="time-clock" ms-if="type==10">
                 <span class="bs-text-smaller" style="color: #fff;background-color: #000;    display: inline-block;width: 61px;text-align: center;margin: 0 10px;">教你省钱</span>
                 <span class="bs-text-small">越晚入住越省钱哦！</span>
                 <br>
