--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -8,7 +8,7 @@
 }
 .modal-content-title {
     line-height: 48px;
-    margin: 34px 30px 20px;
+    margin: 10px 30px 5px;
     text-align: right;
 }
 
@@ -21,9 +21,7 @@
     display: inline-block;
     box-sizing: content-box;
     border: 13px solid transparent;
-    top: 16px;
-    left: 20px;
-    position: absolute;
+    float: left;
 }
 
 .modal-save {
