1、发送邀请入住改为点击右上角分享 2、更多服务改为对话框 3、客服前置服务头像更换、样式修改。 4、设备控制页面修改 5、支付成功后跳转到服务列表页 6、点击地图，显示地图导航。

--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -183,7 +183,7 @@
     <div style="height: 15px;">
     </div>
     <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item" ms-on-tap="goIndex2">
+        <a class="mui-tab-item" ms-on-tap="goIndex">
             <span class="mui-icon"><img src="/img/icon/icon-home-select.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
         </a>
