--- a/js/pages/service/ready.html
+++ b/js/pages/service/ready.html
@@ -124,14 +124,14 @@
         <div style="margin: 0 30px 18px;color: #444;font-size: 18px;">
             酒店所在位置
         </div>
-        <div>
+        <div ms-on-tap="openNav">
             <img src="../img/service-hotelPlace.png" style="height: 200px;width: 100vw;">
         </div>
     </div>
     <div style="height: 14px;">
     </div>
     <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item" ms-on-tap="goIndex2">
+        <a class="mui-tab-item" ms-on-tap="goIndex">
             <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
         </a>
