--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -101,27 +101,26 @@ body {
     </li>
     <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:1px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
         <a href="#" style="margin: 3px auto">
-            <div style="height: 68px;width: 68px;border: 1px solid #fcc02f;border-radius: 68px;margin: 0px auto;display: table" ms-on-tap="goOpendoor">
+            <div style="height: 80px;width: 80px;border: 4px solid #fcc02f;border-color: rgba(252,192,47,0.6);border-radius: 68px;margin: 0px auto;display: table" ms-on-tap="goOpendoor">
                 <span style="display:table-cell;vertical-align: middle;color: #fcc02f;font-size: 12px;font-family: 'Microsoft Yahei';">点击开门</span>
             </div>
-            <div style="margin-left: 10px;display: flex;flex-direction: column;justify-content: center">
-                <span style="color: #b3dfdb;font-size: 10px;font-family: 'Microsoft Yahei';margin-top: 16px">请观察圈中的影像再开门</span>
+            <div style="display: flex;flex-direction: column;justify-content: center">
+                <span style="color: #b3dfdb;font-size: 8px;font-family: 'Microsoft Yahei';margin-top: 8px">请观察圈中的影像再开门</span>
             </div>
         </a>
     </li>
     <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:0px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
-        <a style="margin: 3px auto">
-            <div style="height: 68px;width: 68px;border: 1px solid #fcc02f;border-radius: 68px;margin: 0px auto;display: table" ms-on-tap="goCheckout">
-                <span style="display:table-cell;vertical-align: middle;color: #fcc02f;font-size: 12px;font-family: 'Microsoft Yahei';">点击退房</span>
+            <div style="margin: 0px auto;margin-top: 24px;" ms-on-tap="goCheckout">
+            <img src="../img/icon/checkOut.svg" class="">
+                <div class="bs-text-smaller" style="color: #fcc02f;font-family: 'Microsoft Yahei';">点击退房</div>
             </div>
-            <div style="margin-left: 10px;display: flex;flex-direction: column;justify-content: center">
-                <span style="color: #b3dfdb;font-size: 10px;font-family: 'Microsoft Yahei';margin-top: 16px">将于明日11:00退房</span>
+            <div style="display: flex;flex-direction: column;justify-content: center">
+                <span style="color: #b3dfdb;font-size: 8px;font-family: 'Microsoft Yahei';margin-top: 7px">将于明日11:00退房</span>
             </div>
-        </a>
     </li>
 </ul>
 <div class="intro-title">
-    <span>为您介绍</span>
+    <span>设备控制</span>
 </div>
 <div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="height: 114px;background: white">
     <div class="mui-scroll">
@@ -186,7 +185,7 @@ body {
     </div>
 </div>
 <nav class="mui-bar mui-bar-tab" style="background: white !important;" ms-controller="inroom">
-    <a class="mui-tab-item" ms-on-tap="goIndex2">
+    <a class="mui-tab-item" ms-on-tap="goIndex">
         <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
         <span class="mui-tab-label">首页</span>
     </a>
