--- a/js/pages/order/newOrderList.html
+++ b/js/pages/order/newOrderList.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item mui-active" ms-on-tap="goIndex2">
+        <a class="mui-tab-item mui-active" ms-on-tap="goIndex">
             <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
         </a>
