--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -193,7 +193,7 @@ div ul li {
         </div>-->
     </div>
     <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item" ms-on-tap="goIndex2">
+        <a class="mui-tab-item" ms-on-tap="goIndex">
             <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
         </a>
